test/libyul/yulSyntaxTests/switch_duplicate_case.yul
{
	switch 0:u256
	case 0:u256 {}
	case 0x0:u256 {}
}
// ====
// dialect: evmTyped
// ----
// DeclarationError 6792: (34-50): Duplicate case defined.
